# 3-rd-semester

./: AssetManager.cpp  AssetManager.h  Bird.cpp  Bird.h  CMakeLists.txt  Collision.cpp  Collision.h  DEFINITIONS.h  Flash.cpp  Flash.h  Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  HUD.cpp  HUD.h  InputManager.cpp  InputManager.h  Land.cpp  Land.h  MainMenuState.cpp  MainMenuState.h  Pipe.cpp  Pipe.h  SplashState.cpp  SplashState.h  State.h  StateMachine.cpp  StateMachine.h  main.cpp
course work/: AssetManager.cpp  AssetManager.h  Bird.cpp  Bird.h  CMakeLists.txt  Collision.cpp  Collision.h  Flash.cpp  Flash.h  Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  HUD.cpp  HUD.h  InputManager.cpp  InputManager.h  Land.cpp  Land.h  MainMenuState.cpp  MainMenuState.h  Pipe.cpp  Pipe.h  SplashState.cpp  SplashState.h  State.h  StateMachine.cpp  StateMachine.h  defines.h  main.cpp
labs/lab1/: CMakeLists.txt  main  ring.cpp  ring.h  task.cpp
labs/lab3-4/: CMakeLists.txt  calendar.cpp  calendar.h  main.cpp  source.cpp  source.h
labs/lab5/: CMakeLists.txt  ring.cpp  ring.h  task.cpp
labs/lab7/: CMakeLists.txt  main.cpp
